[Vishnu]-Added Pin and Archive options to Notes
