# app/Http/Controllers/NotesController.php
@@ -5,6 +5,7 @@ use Illuminate\support\Facades\Hash;
 use Illuminate\Http\Request;
 use App\Models\notes;
 
+use Illuminate\Support\Facades\Log;
 
 class notesController extends Controller
 {
@@ -193,7 +194,222 @@ class notesController extends Controller
         else
         {
             Log::channel('custom')->info("No Notes Found with that ID");
-            return response()->json(['message'=>'No Data Found with that ID'],404);
+            return response()->json(['message'=>'No Notes Found with that ID'],404);
         }
     }
+
+
+    //----------------Function to Add Pin to Notes----------------------
+    /**
+     * @OA\POST(
+     *   path="/api/pinNotesById",
+     *   summary="Pin Notes by ID",
+     *   description="Pin Notes by ID",
+     *   @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"id"},
+     *               @OA\Property(property="id", type="integer"),
+     *               
+     *            ),
+     *        ),
+     *    ),
+     *   @OA\Response(response=201, description="Notes pinned Successfully"),
+     *   @OA\Response(response=404, description="No Notes Found with that ID"),
+     *   
+     * )
+     * 
+     *
+     * @return \Illuminate\Http\JsonResponse
+     */
+    function pinNotesById(Request $request)
+    {
+        $request->validate( [
+            'id' => 'required | integer',
+        ]);
+
+        $notesObject = new Notes();
+        $notes = $notesObject->noteId($request->id);
+
+        if (!$notes) {
+            Log::channel('custom')->info("No Notes Found with that ID");
+            return response()->json(['message'=>'No Notes Found with that ID'],404);
+        }
+        if ($notes->pin == 0)
+        {
+            if ($notes->archive == 1) {
+                $notes->archive = 0;
+                $notes->save();
+            }
+            $notes->pin = 1;
+            $notes->save();
+
+            Log::channel('custom')->info('Notes pinned successfully');
+            return response()->json(['message' => 'Notes pinned Successfully'], 201);                          
+        }
+    }
+
+
+    //--------------------Function to UnPin Notes---------------------------
+    /**
+     * @OA\POST(
+     *   path="/api/UnpinNotesById",
+     *   summary="UnPin Notes by ID",
+     *   description="UnPin Notes by ID",
+     *   @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"id"},
+     *               @OA\Property(property="id", type="integer"),
+     *               
+     *            ),
+     *        ),
+     *    ),
+     *   @OA\Response(response=201, description="Notes Unpinned Successfully"),
+     *   @OA\Response(response=404, description="No Notes Found with that ID"),
+     *   
+     * )
+     * 
+     *
+     * @return \Illuminate\Http\JsonResponse
+     */
+    function UnpinNotesById(Request $request)
+    {
+        $request->validate( [
+            'id' => 'required | integer',
+        ]);
+
+        $notesObject = new Notes();
+        $notes = $notesObject->noteId($request->id);
+
+        if (!$notes) {
+            Log::channel('custom')->info("No Notes Found with that ID");
+            return response()->json(['message'=>'No Notes Found with that ID'],404);
+        }
+        if ($notes->pin == 1)
+        {
+            
+            $notes->pin = 0;
+            $notes->save();
+
+            Log::channel('custom')->info('Notes Unpinned successfully');
+            return response()->json(['message' => 'Notes Unpinned Successfully'], 201);                          
+        }
+    }
+
+
+
+    
+    //--------------------Function to Archive Notes----------------------------
+    /**
+     * @OA\POST(
+     *   path="/api/ArchieveNotesById",
+     *   summary="Archive Notes by ID",
+     *   description="Archive Notes by ID",
+     *   @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"id"},
+     *               @OA\Property(property="id", type="integer"),
+     *               
+     *            ),
+     *        ),
+     *    ),
+     *   @OA\Response(response=201, description="Notes Archived Successfully"),
+     *   @OA\Response(response=404, description="No Notes Found with that ID"),
+     *   
+     * )
+     * 
+     *
+     * @return \Illuminate\Http\JsonResponse
+     */
+    function ArchieveNotesById(Request $request)
+    {
+        $request->validate( [
+            'id' => 'required | integer',
+        ]);
+
+        $notesObject = new Notes();
+        $notes = $notesObject->noteId($request->id);
+
+        if (!$notes) {
+            Log::channel('custom')->info("No Notes Found with that ID");
+            return response()->json(['message'=>'No Notes Found with that ID'],404);
+        }
+        if ($notes->archive == 0)
+        {
+            if($notes->pin == 1){
+                $notes->pin =0;
+                $notes -> save();
+            }
+            
+            $notes->archive = 1;
+            $notes->save();
+
+            Log::channel('custom')->info('Notes Archived successfully');
+            return response()->json(['message' => 'Notes Archived Successfully'], 201);                          
+        }
+    }
+
+
+    //------------------Function to UnArchive Notes----------------------------
+    /**
+     * @OA\POST(
+     *   path="/api/UnArchiveNotesById",
+     *   summary="UnArchive Notes by ID",
+     *   description="UnArchive Notes by ID",
+     *   @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"id"},
+     *               @OA\Property(property="id", type="integer"),
+     *               
+     *            ),
+     *        ),
+     *    ),
+     *   @OA\Response(response=201, description="Notes UnArchived Successfully"),
+     *   @OA\Response(response=404, description="No Notes Found with that ID"),
+     *   
+     * )
+     * 
+     *
+     * @return \Illuminate\Http\JsonResponse
+     */
+    function UnArchiveNotesById(Request $request)
+    {
+        $request->validate( [
+            'id' => 'required | integer',
+        ]);
+
+        $notesObject = new Notes();
+        $notes = $notesObject->noteId($request->id);
+
+        if (!$notes) {
+            Log::channel('custom')->info("No Notes Found with that ID");
+            return response()->json(['message'=>'No Notes Found with that ID'],404);
+        }
+        if ($notes->archive == 1)
+        {
+            
+            $notes->archive = 0;
+            $notes->save();
+
+            Log::channel('custom')->info('Notes UnArchived successfully');
+            return response()->json(['message' => 'Notes UnArchived successfully'], 201);                          
+        }
+    }
+
+
 }
